ch9/policy-allow-view-gw.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-view-gw
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  rules: 
  - to:
    - operation:
        hosts: ["apiserver.istioinaction.io"]
        methods: ["GET"]
